--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "10.2.3",
     "postcss": "8.2.4",
+    "postcss-custom-properties": "^11.0.0",
     "tailwindcss": "^2.0.2"
   },
   "license": "MIT"
